--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         </div>
         <div class="nav-right">
             <a href="/home">Home</a>
-            <a href="/about">About</a>
+            <a href="/about.html">About</a>
         </div>
     </nav>
 
