--- a/about.html
+++ b/about.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - IITI Bot</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-M3OQKHpjM4RWyUpuLV+XUeW9+TzYYxw6iFDDThsnbOz/3YQ28Xk3q4p6zXKIVa2XEGwlQhMiQZlY+3A7kQg4Rg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <img src="assets/iiti_logo.png" alt="IIT Indore Logo" class="logo" />
-            <span>IITI Bot</span>
+            <img src="assets/iiti_logo.png" alt="IITI BOT Logo" class="logo" />
+            <span class="brand-name">IITI BOT</span>
         </div>
         <div class="nav-right">
-            <a href="/home">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/login.html">Login</a>
-            <a href="/signup.html">Signup</a>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="login.html" class="btn login-btn">Log In</a>
+            <a href="signup.html" class="btn signup-btn">Sign Up</a>
         </div>
     </nav>
 
@@ -68,61 +67,80 @@
         <h2>Meet Our Team</h2>
         <div class="team-grid">
             <div class="team-member">
-                <img src="assets/aditya_rai.png" alt="Aditya Rai" />
-                <p>ADITYA<br />RAI</p>
+                <img src="assets/khush_kumar_singh.png" alt="Khush Kumar Singh" />
+                <div class="member-name">KHUSH KUMAR<br />SINGH</div>
                 <div class="social-links">
-                    <a href="https://instagram.com/adityarai" target="_blank" title="Instagram">
-                        <img src="assets/insta_logo_3.png" alt="Instagram" class="social-icon" />
+                    <a href="https://instagram.com/khush" target="_blank" class="tooltip" data-tooltip="instagram.com/khush">
+                        <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://github.com/adityarai" target="_blank" title="GitHub">
-                        <img src="assets/github_icon.jpg" alt="GitHub" class="social-icon" />
+                    <a href="https://github.com/khush" target="_blank" class="tooltip" data-tooltip="github.com/khush">
+                        <i class="fab fa-github"></i>
                     </a>
                 </div>
             </div>
 
             <div class="team-member">
                 <img src="assets/rudra_chitkara.png" alt="Rudra Chitkara" />
-                <p>RUDRA<br />CHITKARA</p>
+                <div class="member-name">RUDRA<br />CHITKARA</div>
                 <div class="social-links">
-                <a href="https://instagram.com/rudra" target="_blank" class="tooltip" data-tooltip="Instagram">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://github.com/rudra" target="_blank" class="tooltip" data-tooltip="GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
+                    <a href="https://instagram.com/rudra" target="_blank" class="tooltip" data-tooltip="instagram.com/rudra">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/rudra" target="_blank" class="tooltip" data-tooltip="github.com/rudra">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
             </div>
 
-            </div>
             <div class="team-member">
-                <img src="assets/poorvansh_dashore.png" alt="Poorvansh Dashore" />
-                <p>POORVANSH<br />DASHORE</p>
+                <img src="assets/Aditya_rai.png" alt="Aditya Rai" />
+                <div class="member-name">ADITYA<br />RAI</div>
                 <div class="social-links">
-                    <a href="https://instagram.com/poorvansh" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/poorvansh" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://instagram.com/aditya" target="_blank" class="tooltip" data-tooltip="instagram.com/aditya">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/aditya" target="_blank" class="tooltip" data-tooltip="github.com/aditya">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
+
+            <div class="team-member">
+                <img src="assets/Poorvansh.png" alt="Poorvansh Dashore" />
+                <div class="member-name">POORVANSH<br />DASHORE</div>
+                <div class="social-links">
+                    <a href="https://instagram.com/poorvansh" target="_blank" class="tooltip" data-tooltip="instagram.com/poorvansh">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/poorvansh" target="_blank" class="tooltip" data-tooltip="github.com/poorvansh">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="team-member">
+                <img src="assets/Snhehith.png" alt="budde Snehith" />
+                <div class="member-name">BUDDE<br />SNEHITH</div>
+                <div class="social-links">
+                    <a href="https://instagram.com/snehith" target="_blank" class="tooltip" data-tooltip="instagram.com/snhehith">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/snehith" target="_blank" class="tooltip" data-tooltip="github.com/snehith">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+
             <div class="team-member">
                 <img src="assets/ayinala_sri_nikesh.png" alt="Ayinala Sri Nikesh" />
-                <p>AYINALA SRI<br />NIKESH</p>
+                <div class="member-name">AYINALA<br />SRI NIKESH</div>
                 <div class="social-links">
-                    <a href="https://instagram.com/nikesh" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/nikesh" target="_blank"><i class="fab fa-github"></i></a>
-                </div>
-            </div>
-            <div class="team-member">
-                <img src="assets/aditya_rai.png" alt="Aditya Rai" />
-                <p>ADITYA<br />RAI</p>
-                <div class="social-links">
-                    <a href="https://instagram.com/adityarai" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/adityarai" target="_blank"><i class="fab fa-github"></i></a>
-                </div>
-            </div>
-            <div class="team-member">
-                <img src="assets/budde_snehith.png" alt="Budde Snehith" />
-                <p>BUDDE<br />SNEHITH</p>
-                <div class="social-links">
-                    <a href="https://instagram.com/snehith" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://github.com/snehith" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://instagram.com/ayinala" target="_blank" class="tooltip" data-tooltip="instagram.com/ayinala">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://github.com/ayinala" target="_blank" class="tooltip" data-tooltip="github.com/ayinala">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
         </div>
