--- a/signup.html
+++ b/signup.html
@@ -8,12 +8,14 @@
 <body>
     <nav class="navbar">
         <div class="nav-left">
-            <img src="assets/iiti_logo.png" alt="IIT Indore Logo" class="logo" />
-            <span>IITI Bot</span>
+            <img src="assets/iiti_logo.png" alt="IITI BOT Logo" class="logo" />
+            <span class="brand-name">IITI BOT</span>
         </div>
         <div class="nav-right">
-            <a href="/home">Home</a>
-            <a href="/about.html">About</a>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About</a>
+            <a href="login.html" class="btn login-btn">Log In</a>
+            <a href="signup.html" class="btn signup-btn">Sign Up</a>
         </div>
     </nav>
 
